objects/ssot__GeneratedWaste__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DisposalSiteType__c</fullName>
        <label>Disposal Site Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DisposalType__c</fullName>
        <label>Disposal Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DisposedWasteQuantityUnit__c</fullName>
        <label>Disposed Waste Quantity Unit</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DisposedWasteQuantity__c</fullName>
        <label>Disposed Waste Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Generated Waste Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsHazardous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hazardous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Scope3CrbnFtprntId__c</fullName>
        <label>Scope 3 Carbon Footprint</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Scope3EmssnSrcId__c</fullName>
        <label>Scope 3 Emissions Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__StnryAssetEnvrSrcId__c</fullName>
        <label>Stationary Asset Environmental Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScope1EmissionsInTco2eNumber__c</fullName>
        <label>Supl Scope 1 Emissions</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScp3DnstrmEndLifeSoldPrdctNumber__c</fullName>
        <label>Supl Scp3 Dnstrm EOL Sold Product</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScp3UpstrmWstGenInOperNumber__c</fullName>
        <label>Supl Scp3 Upstrm Waste Gen In Operation</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SupplierId__c</fullName>
        <label>Supplier</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WasteFootprintId__c</fullName>
        <label>Waste Footprint</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WasteType__c</fullName>
        <label>Waste Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WstDispoEmssnFctrId__c</fullName>
        <label>Waste Disposal Emissions Factors</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383537718_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GeneratedWaste_StnryAssetEnvrSrcId_m_rel</label>
        <referenceTo>ssot__StationaryAssetEnvSource__dlm</referenceTo>
        <relationshipLabel>GeneratedWaste_StnryAssetEnvrSrcId_m_rel</relationshipLabel>
        <relationshipName>rel_1747383537718_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383539834_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GeneratedWaste_WasteFootprintId_map__rel</label>
        <referenceTo>ssot__WasteFootprint__dlm</referenceTo>
        <relationshipLabel>GeneratedWaste_WasteFootprintId_map__rel</relationshipLabel>
        <relationshipName>rel_1747383539834_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383543561_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GeneratedWaste_Scope3CrbnFtprntId_ma_rel</label>
        <referenceTo>ssot__Scope3CarbonFootprint__dlm</referenceTo>
        <relationshipLabel>GeneratedWaste_Scope3CrbnFtprntId_ma_rel</relationshipLabel>
        <relationshipName>rel_1747383543561_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>